syntax = "proto3";

option go_package = "./proto";

package resume;

import "google/protobuf/timestamp.proto";

// message Education {
//     string education = 1;
// }

message Skill {
    string skill = 1;
}

message Direction {
    string direction = 1;
}

// message Resume {
//     uint64 resumeId = 1;
//     string firstName = 2;
//     string middleName = 3;
//     string lastName = 4;
//     string phoneNumber = 5;
//     string education = 6;
//     string aboutMe = 7;
//     repeated Skill skills = 8;
//     string photo = 9;
//     repeated Direction directions = 10;
//     string aboutProjects = 11;
//     string portfolio = 12;
//     string studentGroup = 13;
// }

message ResumeSended {
    string resumeId = 1;
    string firstName = 2;
    string middleName = 3;
    string lastName = 4;
    string phoneNumber = 5;
    string education = 6;
    string aboutMe = 7;
    repeated Skill skills = 8;
    bytes photo = 9;
    repeated Direction directions = 10;
    string aboutProjects = 11;
    string portfolio = 12;
    string studentGroup = 13;
    google.protobuf.Timestamp createdAt=14;
}

// message ResumeSendedResponse {
//     string message = 1;
// }

// service ResumeService {
//     rpc SendResume(ResumeSended) returns (ResumeSendedResponse) {}
// }